# LCD_Rasp_Weather

./: .gitignore  CMakeLists.txt  README.md
docs/: display.puml  weather.puml
docs/kicad_weather_station/: #auto_saved_files#  _autosave-kicad_weather_station.kicad_sch  fp-info-cache  kicad_weather_station.kicad_pcb  kicad_weather_station.kicad_prl  kicad_weather_station.kicad_pro  kicad_weather_station.kicad_sch  kicad_weather_station.kicad_sch-bak  ~kicad_weather_station.kicad_sch.lck
include/: DisplayBuilder.h  PeripheralFactory.h  pigpio.h
include/drivers/: TextBasedDisplay.h  WeatherStatus.h  WeatherStatusTask.h
lib/: CMakeLists.txt
lib/display_builder/: DisplayBuilder.cpp  PeripheralFactory.cpp
lib/drivers/: DHT11Sensor.cpp  DHT11Sensor.h  LCDDisplay.cpp  LCDDisplay.h
lib/impl/: ConsoleDisplay.cpp  ConsoleDisplay.h  LCDDisplay.cpp  LCDDisplay.h  RandomWeatherGenerator.cpp  RandomWeatherGenerator.h  RandomWeatherGeneratorTask.cpp  RandomWeatherGeneratorTask.h  WeatherStatusTask.cpp
lib/peripheral_factory/: PeripheralFactory.cpp
src/: main.cpp
src/drivers/: RowBasedDisplay.h  TextBasedDisplay.h
src/utils/: defin.c  defin.h
